Hosting initial work
IHost
Host with tests
ObjectProxy
HostEvaluationTests
RunServer
SerializationTests in AjLanguage, AjSharp
Serializable attribute in some Expressions, Commands

2010-05-16
Adding MarshalByRef object to DynamicClass, DynamicObject
AjSharp.RemotingHost using remoting to access remote host and machines
RunHost returns ObjectProxy for IObject in Evaluate method
Hosting.Remoting: RemotingHostServer, RemotingHostClient
Hosting.Wcf: WcfHostServer, WcfHostClient, IHostServer
AjSharp.Hosting.RemotingHostServer
Host, RemotingHostServer, RemotingHostClient at AjSharp.AjSharpMachine
at host expression, at host command: support in Parser
HostedCommand with test
HostedExpression with test
ClientObject
RemotingHost.ajs, WcfHost.ajs examples
Host, WcfHostServer at AjSharpMachine
AjSharp.RunHost using WcfHostServer WcfHostClient instead RunServer

2010-05-18
HostedInvocationExpression
Support of at <host> <callable> with <args> in Parser, with tests

2010-05-19
Support of at <host> <callable> with <args>; as command in Parser
IsLocal in IHost
Host.IsLocal is true, XxxHostClient.IsLocal is false
Separate dictionaries for local and remote hosts in Machine
IHost.RegisterHost, work in progress

2010-05-20
IHost.OnRegisterHost with tests
Machine.GetLocalHosts, Machine.GetRemoteHosts with tests
IHost.Address with tests
RegisterRemotingHost.ajs new example
ProxyServerObject with test (inherits MarshalByRefObject)
DynamicObject.Marshal with test
Remove inherits MarshalByRefObject in DynamicObject
Add [Serializable] to DynamicObject, DynamicClassicObject
Save class name in DynamicClassicObject
IHost.Include, IHost.Execute(string commandtext)
Implements IHost.Include, IHost.Execute in Host, remoting Hosts and wcf hosts
RemotingHostExecuteCommand.ajs example with test
RemotingHostInclude.ajs example with test
New examples for AjSharp: Distributed/ServerAndCallNodes Distributed/ServerAndWorkerNodes
Serializable ExitException
Fix Parser for at host composite command
